Fix scrollbar viewport interference

--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -128,6 +128,10 @@ table {
   border-spacing: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -143,6 +147,7 @@ input {
 
 .App {
   text-align: center;
+  width: 100vw;
 }
 
 .btn {
